# simple-console-translator

./: .gitignore  README.md  pyproject.toml
translation_languages/: translation.py
