[tool.poetry]
name = "translation-languages"
version = "0.1.0"
description = ""
authors = ["yuriyProgg <masalov.09@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
